--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -75,14 +75,48 @@
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
-                    </div>                                                          
+                    </div>
+                    
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 princing-item marge">
+                        <div class="card-body bg-white mt-0 shadow" id="cardOne">
+                            <img src="img/web.png" class="img-fluid">
+                            <h4 class="cardtitre">conception de sites web<br> hébergement<br> nom de domaine</h4>
+                            <p class="cardtexte">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Fusce suscipit, dolor ac varius imperdiet, ipsum neque bibendum libero, ut viverra arcu dolor eget ligula. Nunc suscipit quis odio in gravida.
+                            </p>
+                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 princing-item  marge">
+                        <div class="card-body bg-white mt-0 shadow">
+                            <img src="img/phone.jpg" class="img-fluid">
+                            <h4 class="cardtitre">développement d'applications mobiles<br> android / ios</h4>
+                            <p class="cardtexte">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
+                            </p>
+                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 princing-item marge">
+                        <div class="card-body bg-white mt-0 shadow" id="cardthree">
+                                <img src="img/manage.jpg" class="img-fluid">
+                            <h4 class="cardtitre">développement de logiciel et de plateforme de management</h4>
+                            <p class="cardtexte">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
+                            </p>
+                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
         </section>
             
 
-       <footer class="page-footer" id="pieds">
+       <footer class="page-footer" id="pids">
 			<div class="footer-copyright text-center py-3">© 2018 Copyright:
 				<a href="#">NaN Business - Code Makers</a>
 			</div>
