--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -30,14 +30,16 @@
             <div class="container ">
                 <div class="row text-center title">
                     <div class="col-xs-12">
-                        <h1>Bienvenue sur la plateforme de NaN business</h1>
+                        <h1>Liste des produits et services NaN Business</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                 Nulla est ex, ultricies ac ultrices non, porttitor placerat elit. 
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.
+                                NaN Business vous aide dans la réalisation de vos projets et idées, cela commence par la définition vos objectifs,
+				la recherche de solutions, la rédaction du cahier des charges fonctionnel & technique, Conception préliminaire et validation, Conception & test, 
+				déploiement et enfin suivi avec Amélioration.
+			</p>
+			<p class="sizeOne">
+				NaN Business vous offre aussi des formations pratiques, partant de la bureautique à la conception de site web, ces formations se font en ligne et en présentielle à NaN
+				où sur le lieu de votre choix. Certains des Modules peuvent être clôturer par des certifications internationales (Microsoft, Adobe, Apple, Autodesk).
                         </p>
                     </div>
                 </div>
