--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -50,8 +50,15 @@
                             <img src="img/formation.png" class="img-fluid">
                             <h4 class="cardtitre">modules</h4>
                             <p class="cardtexte">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
-                                Fusce suscipit, dolor ac varius imperdiet, ipsum neque bibendum libero, ut viverra arcu dolor eget ligula. Nunc suscipit quis odio in gravida.
+                                Nos Modules couvrent les compétences suivantes:
+				<ul style="list-style-type:circle">
+				  <li>Création de Sites web</li>
+				  <li>Création  d'applications Mobiles Android & IOS</li>
+				  <li>administration de serveurs Linux</li>
+				  <li>administration de Réseaux Cisco, Huawei et MikroTik</li>
+				  <li>administration de Bases de données </li>
+				  <li>Configuration Autocom avec Asterisk</li>
+				</ul> 
                             </p>
                             <a href="modules.html"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
