--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -69,7 +69,14 @@
                             <img src="img/certifier.png" class="img-fluid">
                             <h4 class="cardtitre">certifications</h4>
                             <p class="cardtexte">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
+                                Obtenez des certifications délivrées par: Microsoft, Adobe, Apple, Autodesk
+								<ul style="list-style-type:circle">
+								  <li>Microsoft: Word, Excel, powerpoint</li>
+								  <li>Adobe: Photoshop, Illustrtor, Premiere pro</li>
+								  <li>Apple: AppleCare, Apple IT and pro apps</li>
+								  <li>Autodesk: Revit, Autocad, 3DS MAX</li>
+								</ul> 
+
                             </p>
                             <a href="certifications.html"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
@@ -80,7 +87,7 @@
                                 <img src="img/cours.png" class="img-fluid">
                             <h4 class="cardtitre">Cours à domicile</h4>
                             <p class="cardtexte">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
+                                Initier vous, votre famille où vos employés à maitriser la suite bureautique Microsoft et aussi à la conception de page web.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
@@ -91,10 +98,12 @@
                             <img src="img/web.png" class="img-fluid">
                             <h4 class="cardtitre">conception de sites web<br> hébergement<br> nom de domaine</h4>
                             <p class="cardtexte">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Fusce suscipit, dolor ac varius imperdiet, ipsum neque bibendum libero, ut viverra arcu dolor eget ligula. Nunc suscipit quis odio in gravida.
+                                Augmenter votre visibilité sur internet en vous faisant mieux connaître.
                             </p>
-                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
+                            <p class="cardtexte">
+                                Afficher vos références, produits et services pour aider vos clients à faire un choix. 
+                            </p>
+                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
                     </div>
 
@@ -103,9 +112,9 @@
                             <img src="img/phone.jpg" class="img-fluid">
                             <h4 class="cardtitre">développement d'applications mobiles<br> android / ios</h4>
                             <p class="cardtexte">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
+                                Renforcez votre réputation, Entretenez et développez votre relation client avec une application Mobile répondant aux exigences de votre activité.
                             </p>
-                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
+                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
                     </div>
 
@@ -114,9 +123,12 @@
                                 <img src="img/manage.jpg" class="img-fluid">
                             <h4 class="cardtitre">développement de logiciel et de plateforme de management</h4>
                             <p class="cardtexte">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla est ex, ultricies ac ultrices non, porttitor placerat elit.
+                                Logiciels prêts à l’emploi où logiciel sur mesure, la question ne se pose plus!
                             </p>
-                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
+                            <p class="cardtexte">
+                                 Augmenter vos revenus à l’aide d’un logiciel sur mesure.
+                            </p>
+                            <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
                     </div>
                 </div>
