--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -33,7 +33,7 @@
                         <h1>Liste des produits et services NaN Business</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                NaN Business vous aide dans la réalisation de vos projets et idées, cela commence par la définition vos objectifs,
+                                NaN Business vous aide dans la réalisation de vos projets et idées, cela commence par la définition de vos objectifs,
                 la recherche de solutions, la rédaction du cahier des charges fonctionnel & technique, Conception préliminaire et validation, Conception & test, 
                 déploiement et enfin suivi avec Amélioration.
             </p>
@@ -51,12 +51,9 @@
                             <h4 class="cardtitre">modules</h4>
                             <p class="cardtexte">
                                 Nos Modules couvrent les compétences suivantes:
-                <ul style="list-style-type:circle">
-                  <li>Création de Sites web</li>
-                  <li>Création  d'applications Mobiles Android & IOS</li>
-                  <li>administration de serveurs Linux</li>
-                  <li>administration de Réseaux Cisco, Huawei et MikroTik</li>
-                  <li>administration de Bases de données </li>
+                <ul style="list-style-type:none">
+                  <li>Création de Sites web et d'applications Mobiles (Android & IOS)</li>
+                  <li>Administration de serveurs Linux, Bases de données, Réseaux (Cisco, Huawei et MikroTik)</li>
                   <li>Configuration Autocom avec Asterisk</li>
                 </ul> 
                             </p>
@@ -81,7 +78,7 @@
                             <h4 class="cardtitre">certifications</h4>
                             <p class="cardtexte">
                                 Obtenez des certifications délivrées par: Microsoft, Adobe, Apple, Autodesk
-                                <ul style="list-style-type:circle">
+                                <ul style="list-style-type:none">
                                   <li>Microsoft: Word, Excel, powerpoint</li>
                                   <li>Adobe: Photoshop, Illustrtor, Premiere pro</li>
                                   <li>Apple: AppleCare, Apple IT and pro apps</li>
