--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -33,13 +33,13 @@
                         <h1>Liste des produits et services NaN Business</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                NaN Business vous aide dans la réalisation de vos projets et idées, cela commence par la définition de vos objectifs,
-                la recherche de solutions, la rédaction du cahier des charges fonctionnel & technique, Conception préliminaire et validation, Conception & test, 
-                déploiement et enfin suivi avec Amélioration.
+                                NaN Business vous accompagne dans la réalisation de vos projets et idées, cela commence par la définition de vos objectifs,
+                la recherche de solutions, la rédaction du cahier des charges fonctionnel et technique, conception préliminaire et validation, conception et test, 
+                déploiement et enfin suivi avec amélioration.
             </p>
             <p class="sizeOne">
                 NaN Business vous offre aussi des formations pratiques, partant de la bureautique à la conception de site web, ces formations se font en ligne et en présentielle à NaN
-                où sur le lieu de votre choix. Certains des Modules peuvent être clôturer par des certifications internationales (Microsoft, Adobe, Apple, Autodesk).
+                où sur le lieu de votre choix. Certains Modules peuvent être clôturer par des certifications internationales (Microsoft, Adobe, Apple, Autodesk).
                         </p>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                                 <img src="img/cours.png" class="img-fluid">
                             <h4 class="cardtitre">Cours à domicile</h4>
                             <p class="cardtexte">
-                                Initier vous, votre famille où vos employés à maitriser la suite bureautique Microsoft et aussi à la conception de page web.
+                                Initier vous, votre famille où vos employés à la suite bureautique Microsoft et aussi à la conception de page web.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
@@ -79,7 +79,7 @@
                             <p class="cardtexte">
                                 Obtenez des certifications délivrées par: Microsoft, Adobe, Apple, Autodesk
                                 <ul style="list-style-type:none">
-                                  <li>Microsoft: Word, Excel, powerpoint</li>
+                                  <li>Microsoft: Word, Excel, Powerpoint</li>
                                   <li>Adobe: Photoshop, Illustrtor, Premiere pro</li>
                                   <li>Apple: AppleCare, Apple IT and pro apps</li>
                                   <li>Autodesk: Revit, Autocad, 3DS MAX</li>
@@ -98,7 +98,7 @@
                                 Augmenter votre visibilité sur internet en vous faisant mieux connaître.
                             </p>
                             <p class="cardtexte">
-                                Afficher vos références, produits et services pour aider vos clients à faire un choix. 
+                                Afficher vos références, produits et services pour aider vos clients à choisir. 
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
@@ -109,7 +109,7 @@
                             <img src="img/phone.jpg" class="img-fluid">
                             <h4 class="cardtitre">développement d'applications mobiles<br> android / ios</h4>
                             <p class="cardtexte">
-                                Renforcez votre réputation, Entretenez et développez votre relation client avec une application Mobile répondant aux exigences de votre activité.
+                                Renforcez votre réputation, entretenez et développez votre relation client avec une application Mobile répondant aux exigences de votre activité.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
