ajout de contenu
ajout de contenu

--- a/nanweb/certifications.html
+++ b/nanweb/certifications.html
@@ -52,11 +52,7 @@
                         <h1> nos certifications</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                 Nulla est ex, ultricies ac ultrices non, porttitor placerat elit. 
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.
+                                Obtenez des Certifications internationales délivrées par Microsoft, Adobe, Apple et Autodesk.
                         </p>
                     </div>
                 </div>
