--- a/nanweb/certifications.html
+++ b/nanweb/certifications.html
@@ -33,7 +33,7 @@
                             <a href="index.html">* Accueil</a>
                             <a href="certifications.html">* Certifications</a>
                             <a href="modules.html">* Modules de formation</a>
-                            <a href="#">* Cours à domicile</a>
+                            <a href="domicile.html">* Cours à domicile</a>
                             <a href="#">* Conception de site web, hebergement & nom de domaine</a>
                             <a href="#">* Developpement applications mobiles android & ios</a>
                             <a href="#">* Developpement logiciel et plateforme de management</a>
@@ -52,7 +52,11 @@
                         <h1> nos certifications</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                Obtenez des Certifications internationales délivrées par Microsoft, Adobe, Apple et Autodesk.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                 Nulla est ex, ultricies ac ultrices non, porttitor placerat elit. 
+                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
+                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
+                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.
                         </p>
                     </div>
                 </div>
