allégement du contenu
allégement du contenu

--- a/nanweb/domicile.html
+++ b/nanweb/domicile.html
@@ -49,11 +49,7 @@
                         <h1> modules dispensés à domicile</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                 Nulla est ex, ultricies ac ultrices non, porttitor placerat elit. 
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.
+                                Initier vous, votre famille où vos employés à la suite bureautique Microsoft et aussi à la conception de page web.
                         </p>
                     </div>
                 </div>
@@ -63,9 +59,7 @@
                             <img src="img/tabexcel.png" class="img-fluid">
                             <h3>Microsoft word 2016</h3>
                             <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
+                                 Microsoft Word est un logiciel de traitement de texte.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
                         </div>
@@ -75,9 +69,7 @@
                             <img src="img/tabword.png" class="img-fluid">
                             <h3>Microsoft excel 2016</h3>
                             <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
+                                 Microsoft Excel est un logiciel tableur de la suite bureautique Microsoft Office.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
                         </div>
@@ -87,9 +79,7 @@
                             <img src="img/tabpower.png" class="img-fluid">
                             <h3>Microsoft powerpoint 2016</h3>
                             <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
+                                 PowerPoint est un logiciel de présentation.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
                         </div>
@@ -97,11 +87,9 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 marge" >
                         <div class="carddomicile">
                             <img src="img/tabexcel.png" class="img-fluid">
-                            <h3>Microsoft word 2016</h3>
+                            <h3>Développement web basic: HTML & CSS</h3>
                             <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
+                                 L’HyperText Markup Language, généralement abrégé HTML, est le langage de balisage conçu pour représenter les pages web. C’est un langage permettant d’écrire de l’hypertexte, d’où son nom.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
                         </div>
@@ -109,11 +97,9 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 marge" >
                         <div class="carddomicile">
                             <img src="img/tabword.png" class="img-fluid">
-                            <h3>Microsoft excel 2016</h3>
+                            <h3>Développement web avancé: Wordpress</h3>
                             <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
+                                 Wordpress est un système de gestion de contenu (CMS) qui permet de créer et de gérer facilement un site ou un blog, pour une école par exemple.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
                         </div>
@@ -121,47 +107,9 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 marge" >
                         <div class="carddomicile">
                             <img src="img/tabpower.png" class="img-fluid">
-                            <h3>Microsoft powerpoint 2016</h3>
+                            <h3>communication digitale: Facebook</h3>
                             <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
-                            </p>
-                            <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 marge" >
-                        <div class="carddomicile">
-                            <img src="img/tabexcel.png" class="img-fluid">
-                            <h3>Microsoft word 2016</h3>
-                            <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
-                            </p>
-                            <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 marge" >
-                        <div class="carddomicile">
-                            <img src="img/tabword.png" class="img-fluid">
-                            <h3>Microsoft excel 2016</h3>
-                            <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
-                            </p>
-                            <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 marge" >
-                        <div class="carddomicile">
-                            <img src="img/tabpower.png" class="img-fluid">
-                            <h3>Microsoft powerpoint 2016</h3>
-                            <p>
-                                 Ut suscipit, mi at molestie pretium, nunc libero pretium sapien,
-                                  ac aliquam neque massa ut magna. Nam faucibus est vitae diam imperdiet,
-                                Cras a purus maximus, lobortis dolor ac, ullamcorper felis.apps.
+                                 La communication digitale est un champ des sciences de l’information relatif à l'utilisation de l’ensemble des médias numériques: le web, les médias sociaux ou les terminaux mobiles .
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn3 ">M'inscrire</button></a>
                         </div>
