--- a/nanweb/index.html
+++ b/nanweb/index.html
@@ -33,29 +33,21 @@
                         <h1>Liste des produits et services NaN Business</h1>
                         <hr class="hr-white">
                         <p class="sizeOne">
-                                NaN Business vous accompagne dans la réalisation de vos projets et idées, cela commence par la définition de vos objectifs,
+                                NaN Business vous offre des formations pratiques et vous accompagne dans la réalisation de vos projets et idées, cela commence par la définition de vos objectifs,
                 la recherche de solutions, la rédaction du cahier des charges fonctionnel et technique, conception préliminaire et validation, conception et test, 
                 déploiement et enfin suivi avec amélioration.
             </p>
-            <p class="sizeOne">
-                NaN Business vous offre aussi des formations pratiques, partant de la bureautique à la conception de site web, ces formations se font en ligne et en présentielle à NaN
-                où sur le lieu de votre choix. Certains Modules peuvent être clôturer par des certifications internationales (Microsoft, Adobe, Apple, Autodesk).
-                        </p>
-                    </div>
+            
+                 </div>
                 </div>
 
                 <div class="row m-auto text-center">             
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 princing-item marge">
                         <div class="card-body bg-white mt-0 shadow">
                             <img src="img/formation.png" class="img-fluid">
-                            <h4 class="cardtitre">modules</h4>
+                            <h4 class="cardtitre">Nos modules</h4>
                             <p class="cardtexte">
-                                Nos Modules couvrent les compétences suivantes:
-                <ul style="list-style-type:none">
-                  <li>Création de Sites web et d'applications Mobiles (Android & IOS)</li>
-                  <li>Administration de serveurs Linux, Bases de données, Réseaux (Cisco, Huawei et MikroTik)</li>
-                  <li>Configuration Autocom avec Asterisk</li>
-                </ul> 
+                                Découvrez l'ensemble de nos modules de formations.
                             </p>
                             <a href="modules.html"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
@@ -77,14 +69,7 @@
                             <img src="img/certifier.png" class="img-fluid">
                             <h4 class="cardtitre">certifications</h4>
                             <p class="cardtexte">
-                                Obtenez des certifications délivrées par: Microsoft, Adobe, Apple, Autodesk
-                                <ul style="list-style-type:none">
-                                  <li>Microsoft: Word, Excel, Powerpoint</li>
-                                  <li>Adobe: Photoshop, Illustrtor, Premiere pro</li>
-                                  <li>Apple: AppleCare, Apple IT and pro apps</li>
-                                  <li>Autodesk: Revit, Autocad, 3DS MAX</li>
-                                </ul> 
-
+                                Obtenez des certifications délivrées par: Microsoft, Adobe, Apple, Autodesk.
                             </p>
                             <a href="certifications.html"> <button type="button" class="btn btn-lg  btn1 ">Consulter</button></a>
                         </div>
@@ -96,9 +81,6 @@
                             <h4 class="cardtitre">conception de sites web<br> hébergement<br> nom de domaine</h4>
                             <p class="cardtexte">
                                 Augmenter votre visibilité sur internet en vous faisant mieux connaître.
-                            </p>
-                            <p class="cardtexte">
-                                Afficher vos références, produits et services pour aider vos clients à choisir. 
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
@@ -120,10 +102,8 @@
                                 <img src="img/manage.jpg" class="img-fluid">
                             <h4 class="cardtitre">développement de logiciel et de plateforme de management</h4>
                             <p class="cardtexte">
-                                Logiciels prêts à l’emploi où logiciel sur mesure, la question ne se pose plus!
-                            </p>
-                            <p class="cardtexte">
-                                 Augmenter vos revenus à l’aide d’un logiciel sur mesure.
+                                Logiciels prêts à l’emploi où logiciel sur mesure, la question ne se pose plus!</br>
+                                Augmenter vos revenus à l’aide d’un logiciel sur mesure.
                             </p>
                             <a href="#"> <button type="button" class="btn btn-lg  btn1 ">J'ai un Projet</button></a>
                         </div>
